@@ -1,7 +1,7 @@
 ;;; pcmpl-rpm.el --- functions for dealing with rpm completions
 
-;; Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004,
-;;   2005, 2006, 2007, 2008, 2009 Free Software Foundation, Inc.
+;; Copyright (C) 1999, 2000, 2001, 2002, 2003, 2004, 2005, 2006, 2007,
+;;   2008, 2009  Free Software Foundation, Inc.
 
 ;; This file is part of GNU Emacs.
 
@@ -24,13 +24,7 @@
 
 ;;; Code:
 
-(provide 'pcmpl-rpm)
-
 (require 'pcomplete)
-
-(defgroup pcmpl-rpm nil
-  "Functions for dealing with rpm completions."
-  :group 'pcomplete)
 
 ;; Functions:
 
@@ -323,6 +317,8 @@
 	       (pcomplete-dirs-or-entries "\\.spec\\'"))))))
        (t
 	(error "You must select a mode: -q, -i, -U, --verify, etc"))))))
+
+(provide 'pcmpl-rpm)
 
 ;; arch-tag: 4e64b490-fecf-430e-b2b9-70a8ad64b8c1
 ;;; pcmpl-rpm.el ends here
